# api-book-part-one

./: README.md  demo.ipynb  newnotes.ipynb  pyproject.toml
chapter3/: autocrud.py  automodels.py  chap3notes.ipynb  crud.py  database.py  models.py  test_autocrud.py  test_crud.py
chapter4/: automodels.py  chapter4notes.ipynb  crud.py  fantasy_data.db  main.py  models.py  test_autocrud.py
chapter4/complete/: main.py
chapter5/: chapter5notes.ipynb  main.py  openapi.json  readme.md  test_crud.py  test_main.py
chapter5/complete/: main.py
chapter6/: .dockerignore  Dockerfile  Dockerfileuv  chapter6notes.ipynb  database.py  main.py  openapi.json  readme.md  schemas.py  test_main.py
chapter7/: chapter7notes.ipynb
chapter7/complete/sdk/tests/: test_swcpy.py  test_swcpy_expanded.py
chapter7/sdk/: README.md  project.toml  pyproject.toml  test_aws.py
chapter7/sdk/src/swcpy/: __init__.py  swc_client.py  swc_config.py
chapter8/: chapter8notes.ipynb
