[project]
name = "api-book-part-one"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "jupyter-ruff>=0.2.0",
    "jupytext>=1.16.7",
    "lab>=8.4",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
    "scipy>=1.15.2",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
